# 6-DOF-Robot-Arm

./: .gitmodules  CMakeLists.txt  robot_arm_6dof_kinematics.cpp  robot_arm_6dof_kinematics.h  test.cpp
src/: CMakeLists.txt  Inverse_Kinematics.h  kinematics_base.h
